--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">AutomaticNewspaperDownloader</string>
+    <string name="app_name_icon">AND</string>
 
     <string name="action_settings">Einstellungen</string>
     <string name="action_contact">Kontakt</string>
